<resources>
    <string name="video_recorder">Perekaman Video</string>
    <string name="recorder_warning_1">Perekaman video akan berlangsung selama 8 detik</string>
    <string name="recorder_warning_2">Dimohon untuk melepas benda yang menutupi wajah seperti kacamata, topi, masker, dll.</string>
    <string name="recorder_warning_3">Pastikan Anda memiliki jaringan internet yang stabil untuk mengupload video yang sudah direkam</string>
    <string name="user_verification">Face Recognition</string>
    <string name="capture_warning_1">You’re required to take two (2) selfie images as instructed.</string>
    <string name="capture_warning_2">Please take off your glasses, hat, or mask when you\'re in the face recognition process.</string>
    <string name="capture_warning_3">Dimohon untuk melepas benda yang menutupi wajah seperti kacamata, topi, masker, dll.</string>
    <string name="warning">Make sure to take off</string>
    <string name="next">Continue</string>
    <string name="take_recorder">Ambil Rekaman</string>
    <string name="used_recorder">Gunakan Rekaman</string>
    <string name="repeat_recorder">Ulangi Rekaman</string>
    <string name="record_result">Hasil Rekaman</string>
    <string name="glasses">Glasses</string>
    <string name="mask">Mask</string>
    <string name="syal">Scarf</string>
    <string name="hat">Hat</string>
    <string name="wording_said">Silahkan mengucapkan kalimat ini:</string>
    <string name="wording">Saya (%s) setuju untuk melakukan pembukaan rekening di %s</string>
    <string name="preview">Preview</string>
    <string name="start_process">Start Selfie</string>
    <string name="title_capture_1">Take Selfie</string>
    <string name="title_capture_2">Take Another Selfie</string>
    <string name="info_capture_1">Face your front camera</string>
    <string name="info_capture_2">Move your head position side to side</string>
    <string name="info_preview">There two (2) selfie images will be used to verify your account. If the images are blurred, please retake your selfie.</string>
    <string name="btn_used_photo">Use Selfie</string>
    <string name="btn_retake_photo">Retake Selfie</string>
    <string name="title_error_connection">No Connection</string>
    <string name="desc_error_connection">Please check your connection and try again</string>
    <string name="button_confirm">OK</string>
    <string name="verification_failed_title">Verification Failed</string>
    <string name="verification_failed_desc">Please retake your photo and make sure your face is clearly visible.</string>
    <string name="verification_success_title">Verification Success</string>
    <string name="verification_success_desc">Liveness detection is successful</string>
</resources>