<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:layout_gravity="bottom"
        android:background="@drawable/bg_corner_top">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_swap"
            android:layout_width="52dp"
            android:layout_height="6dp"
            android:layout_marginTop="12dp"
            app:cardCornerRadius="100dp"
            app:cardBackgroundColor="@color/black_0"
            app:cardElevation="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_warning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/regular"
            android:textColor="@color/black_20"
            android:textSize="16sp"
            android:text="@string/warning"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@+id/cv_swap"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/ll_terms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_warning">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/ic_glasses"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_20"
                    android:text="@string/glasses"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/ic_mask"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_20"
                    android:text="@string/mask"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/ic_syal"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_20"
                    android:text="@string/syal"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/ic_hat"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/black_20"
                    android:text="@string/hat"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

        </LinearLayout>

        <include
            android:id="@+id/button"
            layout="@layout/button_layout"
            android:layout_width="327dp"
            android:layout_height="52dp"
            android:layout_marginTop="51dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_terms"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>